# diet_classifier_pytorch

./: .gitignore  README.md  diet_arch_blocks.py  pyproject.toml
data/: data.yml  entity_labels.json  intent_labels.json  ngram_dict.json  validation.yml  word_dict.json
model/: crf.py  diet.py  sparse_features_extractor.py
scripts/: inference_server.py  train.py  validation.py
src/diet_classifier/: __init__.py
src/diet_classifier/inference/: __init__.py  server.py
src/diet_classifier/model/: __init__.py  crf.py  diet.py  sparse_features_extractor.py
src/diet_classifier/training/: __init__.py  trainer.py
train/: data_loader.py  train.py  trainer.py
