[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diet_classifier"
version = "0.1.0"
description = "DIET Classifier - Dual Intent and Entity Transformer in PyTorch"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "pyyaml",
    "matplotlib",
    "scikit-learn",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
